--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,4 +1,6 @@
 <h2>Create an Author</h2>
+
+<%= form_tag authors_path, method: "post" do %>
   <% if @author.errors.any? %>
     <div id="error_explanation">
       <h2>There were some errors:</h2>
